--- a/_data/skills-frameworks.yml
+++ b/_data/skills-frameworks.yml
@@ -5,29 +5,11 @@
 # - name: Framework
 #   weight: 5
 
-- name: Angular
-  weight: 5
-
-- name: AngularJS
-  weight: 3
-
-- name: React
+- name: Pytorch
   weight: 4
 
-- name: Node
-  weight: 1
-
-- name: Flutter
-  weight: 2
-
-- name: Express
+- name: Pytorch-Geometric
   weight: 3
 
-- name: Django
-  weight: 1
-
-- name: Spring
+- name: Tensorflow
   weight: 2
-
-- name: Rails
-  weight: 4
