--- a/_data/skills-languages.yml
+++ b/_data/skills-languages.yml
@@ -5,38 +5,23 @@
 # - name: Language
 #   weight: 5
 
-- name: TypeScript
+- name: Generative Models
   weight: 5
 
-- name: JavaScript
+- name: Normalizing Flows
+  weight: 5
+
+- name: Equivariant Networks
   weight: 4
 
-- name: Python
-  weight: 2
-
-- name: HTML5
+- name: Adversarial Attacks
   weight: 4
 
-- name: CSS3
-  weight: 3
-
-- name: SASS
-  weight: 3
-
-- name: Java
-  weight: 1
-
-- name: Dart
-  weight: 1
-
-- name: Swift
-  weight: 1
-
-- name: Kotlin
-  weight: 1
-
-- name: C++
+- name: Graph Neural Networks
   weight: 2
 
-- name: Ruby
+- name: KG Embeddings
+  weight: 2
+
+- name: NLP
   weight: 2
