--- a/_data/skills-tools.yml
+++ b/_data/skills-tools.yml
@@ -8,29 +8,12 @@
 - name: Git
   weight: 5
 
+- name: Latex
+  weight: 4
+
 - name: Bash
   weight: 3
 
-- name: Scrum
-  weight: 3
-
-- name: Travis CI
-  weight: 1
-
-- name: Jenkins
-  weight: 1
-
-- name: Chrome DevTools
+- name: Slurm
   weight: 2
 
-- name: npm
-  weight: 2
-
-- name: gulp
-  weight: 4
-
-- name: VS Code
-  weight: 3
-
-- name: Postman
-  weight: 4
