--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -17,45 +17,54 @@
 #     - tag: Rails
 #   timeline-side: right
 
-- title: airbnb
-  title-url: https://example.com/
-  date: Sep 2019 - Present
-  subtitle: Fullstack Developer
+- title: McGill and Mila
+  title-url: https://scholar.google.com/citations?user=ybPyI7IAAAAJ&hl=en
+  date: Sept 2018 - Present
+  subtitle: Phd Student
   tags:
-    - tag: React
-    - tag: Javascript
-    - tag: Ruby
-    - tag: Rails
+    - tag: Geometric Deep Learning
+    - tag: Normalizing Flows
+    - tag: Equivariant Networks
+    - tag: Adversarial Attacks
   timeline-side: right
 
-- title: Google
-  title-url: https://example.com/
-  date: Mar 2019 - Sep 2019
-  subtitle: Software Engineer as Intern
+- title: FaceShield.ai (acquired)
+  #title-url: https://example.com/
+  date: August 2018 - June 2020
+  subtitle: Founder and CEO
   tags:
-    - tag: Flutter
-    - tag: Dart
-    - tag: Keycloak
-  timeline-side: right
-
-- title: Super University
-  title-url: https://example.com/
-  date: 2017 - 2019
-  subtitle: M.Sc. Computer Science
+    - tag: Adversarial Attacks on Face Detection
   timeline-side: left
 
-- title: Facebook
-  title-url: https://example.com/
-  date: Sep 2017 - Mar 2019
-  subtitle: Front-End Developer as Intern
+- title: Uber AI
+  #title-url: https://example.com/
+  date: May 2019 - Aug 2019
+  subtitle: Research Intern
   tags:
-    - tag: React
-    - tag: Node
-    - tag: Javascript
+    - tag: Graph Neural Networks
+    - tag: Meta-Learning
   timeline-side: right
 
-- title: Super University
-  title-url: https://example.com/
-  date: 2014 - 2017
-  subtitle: B.A. Computer Science
+- title: University of Toronto
+  #title-url: https://example.com/
+  date: Sept 2017 - Aug 2018
+  tags:
+    - tag: Adversarial Attacks on Face Detection
+  subtitle: Masters of Applied Science Computer Engineering
+  timeline-side: left
+
+- title: Borealis AI
+  title-url: https://www.borealisai.com/en/
+  date: May 2017 - Jul 2018
+  subtitle: Resarch Intern
+  tags:
+    - tag: NLP
+    - tag: Embeddings
+    - tag: Negative Sampling
+  timeline-side: right
+
+- title: University of Toronto
+  #title-url: https://example.com/
+  date: 2012 - 2017
+  subtitle: Bachelors of Applied Science in Computer Engineering and Minor in Mechatronics
   timeline-side: left
